--- a/TidldyWinksWordCup/TidldyWinksWordCup/MainWindow.xaml
+++ b/TidldyWinksWordCup/TidldyWinksWordCup/MainWindow.xaml
@@ -31,7 +31,7 @@
             </Grid.RowDefinitions>
 
             <Label FontSize="16">Teams</Label>
-            <ListBox x:Name="lbxTeams"  Grid.Row="1"></ListBox>
+            <ListBox x:Name="lbxTeams" Grid.Row="1" SelectionChanged="lbxTeams_SelectionChanged"></ListBox>
         </Grid>
 
         <!--Players information-->
