--- a/TidldyWinksWordCup/TidldyWinksWordCup/MainWindow.xaml
+++ b/TidldyWinksWordCup/TidldyWinksWordCup/MainWindow.xaml
@@ -49,7 +49,12 @@
         <StackPanel Grid.Column="2" Grid.Row="1" Margin="8">
             <!--Rating recorder-->
             <Label FontSize="16">Rating</Label>
-            
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Image x:Name="imgStar1" Source="/starsolid.png"></Image>
+                <Image x:Name="imgStar2" Source="/starsolid.png"></Image>
+                <Image x:Name="imgStar3" Source="/starsolid.png"></Image>
+            </StackPanel>
+
             <!--Result recorder-->
             <Label FontSize="16">Record Reult</Label>
             <Button x:Name="btnRecordWin" Margin="8" Click="btnRecordWin_Click">Win</Button>
