:sparkles: Display player rating

--- a/TidldyWinksWordCup/TidldyWinksWordCup/MainWindow.xaml
+++ b/TidldyWinksWordCup/TidldyWinksWordCup/MainWindow.xaml
@@ -42,7 +42,7 @@
             </Grid.RowDefinitions>
 
             <Label FontSize="16">Players</Label>
-            <ListBox x:Name="lbxPlayers"  Grid.Row="1"></ListBox>
+            <ListBox x:Name="lbxPlayers"  Grid.Row="1" SelectionChanged="lbxPlayers_SelectionChanged"></ListBox>
         </Grid>
 
         <!--Other information-->
@@ -56,7 +56,7 @@
             </StackPanel>
 
             <!--Result recorder-->
-            <Label FontSize="16">Record Reult</Label>
+            <Label FontSize="16" Content="Record Result"/>
             <Button x:Name="btnRecordWin" Margin="8" Click="btnRecordWin_Click">Win</Button>
             <Button x:Name="btnRecordLoss" Margin="8" Click="btnRecordLoss_Click">Loss</Button>
             <Button x:Name="btnRecordDraw" Margin="8" Click="btnRecordDraw_Click">Draw</Button>
